force-app/main/default/objects/Phone_Sale__c/Phone_Sale__c.object-meta.xml
<CustomObject>
    <label>Phone Sale</label>
    <nameField>
        <displayFormat>PS-{000000}</displayFormat>
        <label>Phone Sale Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Phone Sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>