force-app/main/default/objects/Phone_Sale__c/fields/ae_days__c.field-meta.xml
<CustomField>
    <fullName>ae_days__c</fullName>
    <label>AE Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>