force-app/main/default/objects/Phone_Sale__c/fields/AE_SB_Date__c.field-meta.xml
<CustomField>
    <fullName>AE_SB_Date__c</fullName>
    <description>Date PAX would like to leave Australia(AE)
            Date PAX would like to return to Australia(SB)</description>
    <label>AE/SB Date</label>
    <type>Date</type>
</CustomField>