force-app/main/default/objects/Phone_Sale__c/fields/AE_SB_Price__c.field-meta.xml
<CustomField>
    <fullName>AE_SB_Price__c</fullName>
    <label>AE/SB Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>