force-app/main/default/objects/Phone_Sale__c/fields/AUSDate__c.field-meta.xml
<CustomField>
    <fullName>AUSDate__c</fullName>
    <formula>TEXT(DAY( DateFormat__c ))&amp;&quot;/&quot;&amp;TEXT(MONTH( DateFormat__c ))&amp;&quot;/&quot;&amp;TEXT(YEAR( DateFormat__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AUSDate</label>
    <type>Text</type>
</CustomField>