force-app/main/default/objects/Phone_Sale__c/fields/coupon__c.field-meta.xml
<CustomField>
    <fullName>coupon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coupon</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>coupon__c.Status__c</field>
            <operation>equals</operation>
            <value>Enabled</value>
        </filterItems>
        <filterItems>
            <field>coupon__c.Phone_Only__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>coupon__c</referenceTo>
    <relationshipLabel>Phone Sales</relationshipLabel>
    <relationshipName>Phone_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>