force-app/main/default/objects/Phone_Sale__c/fields/DateFormat__c.field-meta.xml
<CustomField>
    <fullName>DateFormat__c</fullName>
    <formula>DATEVALUE(LastModifiedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DateFormat</label>
    <type>Date</type>
</CustomField>