force-app/main/default/objects/Phone_Sale__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3 OR (4 AND 5))</booleanFilter>
        <errorMessage>Deal - Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Deal__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>TAD Deal</value>
        </filterItems>
        <filterItems>
            <field>Deal__c.Status__c</field>
            <operation>equals</operation>
            <value>Published</value>
        </filterItems>
        <filterItems>
            <field>Deal__c.Status__c</field>
            <operation>equals</operation>
            <value>Hero</value>
        </filterItems>
        <filterItems>
            <field>Deal__c.recently_expired__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Deal__c.Status__c</field>
            <operation>equals</operation>
            <value>Expired</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>Phone Sales (Deal)</relationshipLabel>
    <relationshipName>Phone_Sales1</relationshipName>
    <type>Lookup</type>
</CustomField>