force-app/main/default/objects/Phone_Sale__c/fields/DealPDFURLFormula__c.field-meta.xml
<CustomField>
    <fullName>DealPDFURLFormula__c</fullName>
    <formula>Deal__r.pdf__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DealPDFURLFormula</label>
    <type>Text</type>
</CustomField>