force-app/main/default/objects/Phone_Sale__c/fields/departure_cities__c.field-meta.xml
<CustomField>
    <fullName>departure_cities__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Departure Cities</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>departure_cities__c.Deal__c</field>
            <operation>equals</operation>
            <valueField>$Source.Deal__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>departure_cities__c</referenceTo>
    <relationshipLabel>Phone Sales</relationshipLabel>
    <relationshipName>Phone_Sales</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>