force-app/main/default/objects/Phone_Sale__c/fields/Departure_Cities_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Departure_Cities_Surcharge__c</fullName>
    <label>Departure Cities Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>