force-app/main/default/objects/Phone_Sale__c/fields/Email_Purchaser__c.field-meta.xml
<CustomField>
    <fullName>Email_Purchaser__c</fullName>
    <label>Email(Purchaser)</label>
    <type>Email</type>
</CustomField>