force-app/main/default/objects/Phone_Sale__c/fields/hidden_checkbox__c.field-meta.xml
<CustomField>
    <fullName>hidden_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden Checkbox</label>
    <type>Checkbox</type>
</CustomField>