force-app/main/default/objects/Phone_Sale__c/fields/is_confirmed__c.field-meta.xml
<CustomField>
    <fullName>is_confirmed__c</fullName>
    <formula>CONTAINS(TEXT(Status__c),&apos;Confirmed&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Confirmed</label>
    <type>Checkbox</type>
</CustomField>