force-app/main/default/objects/Phone_Sale__c/fields/is_held__c.field-meta.xml
<CustomField>
    <fullName>is_held__c</fullName>
    <formula>CONTAINS(TEXT(Status__c),&apos;On Hold&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Held</label>
    <type>Checkbox</type>
</CustomField>