force-app/main/default/objects/Phone_Sale__c/fields/land_activity_a__c.field-meta.xml
<CustomField>
    <fullName>land_activity_a__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Land Activity A</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>land_activity__c.Deal__c</field>
            <operation>equals</operation>
            <valueField>$Source.Deal__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>land_activity__c</referenceTo>
    <relationshipLabel>Phone Sales (Land Activity A)</relationshipLabel>
    <relationshipName>Phone_Sales1</relationshipName>
    <type>Lookup</type>
</CustomField>