force-app/main/default/objects/Phone_Sale__c/fields/land_activity_price__c.field-meta.xml
<CustomField>
    <fullName>land_activity_price__c</fullName>
    <label>Land Activity Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>