force-app/main/default/objects/Phone_Sale__c/fields/Line_Price__c.field-meta.xml
<CustomField>
    <fullName>Line_Price__c</fullName>
    <formula>(Options_Price__c / QTY_Number__c) +
(Sub_Options_Price__c / QTY_Number__c) +
(AE_SB_Price__c / QTY_Number__c) +
(HSS_Price__c / QTY_Number__c) +
(Departure_Cities_Surcharge__c / QTY_Number__c) +
(Post_Tour_StopOver_Price__c / QTY_Number__c) +
Post_Tour_StopOver_Solo_Price__c +
(Pre_Tour_StopOver_Price__c / QTY_Number__c) +
Pre_Tour_StopOver_Solo_Price__c +
Solo_Surcharge__c +
(land_activity_price__c / QTY_Number__c)+
land_activity_solo_price__c+
(land_activity_a_price__c / QTY_Number__c)+
land_activity_a_solo_price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Single Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>