force-app/main/default/objects/Phone_Sale__c/fields/Marketing_Source__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Source__c</fullName>
    <label>Marketing Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email (Newsletter)</fullName>
            </value>
            <value>
                <fullName>FacebookInstagram</fullName>
            </value>
            <value>
                <fullName>Friend/relative</fullName>
            </value>
            <value>
                <fullName>Newspaper - (NSW) Sunday Telegraph</fullName>
            </value>
            <value>
                <fullName>Newspaper - (QLD) The Sunday Mail</fullName>
            </value>
            <value>
                <fullName>Newspaper - (VIC) The Sunday Herald Sun</fullName>
            </value>
            <value>
                <fullName>Newspaper - (SA) The Adelaide Advertiser</fullName>
            </value>
            <value>
                <fullName>Internet - Banner Advert</fullName>
            </value>
            <value>
                <fullName>Internet - YouTube Video</fullName>
            </value>
            <value>
                <fullName>Internet - Google Search</fullName>
            </value>
            <value>
                <fullName>Radio - (NSW) 2GB</fullName>
            </value>
            <value>
                <fullName>Radio - (NSW) BAY FM</fullName>
            </value>
            <value>
                <fullName>Radio - (VIC) 3AW</fullName>
            </value>
            <value>
                <fullName>Radio - (QLD) 4BC</fullName>
            </value>
            <value>
                <fullName>Gold Coast Titans NRL - Email</fullName>
            </value>
            <value>
                <fullName>Gold Coast Titans NRL - Social Media</fullName>
            </value>
            <value>
                <fullName>Gold Coast Titans NRL - Competition</fullName>
            </value>
            <value>
                <fullName>Gold Coast Titans NRL - Game Event</fullName>
            </value>
            <value>
                <fullName>Letterbox Flyer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>