force-app/main/default/objects/Phone_Sale__c/fields/Option_SubOption_Formula__c.field-meta.xml
<CustomField>
    <fullName>Option_SubOption_Formula__c</fullName>
    <formula>options__r.title__c&amp;&quot; - &quot;&amp; sub_options__r.title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Option/SubOption Formula</label>
    <type>Text</type>
</CustomField>