force-app/main/default/objects/Phone_Sale__c/fields/Options_Price__c.field-meta.xml
<CustomField>
    <fullName>Options_Price__c</fullName>
    <label>Options Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>