force-app/main/default/objects/Phone_Sale__c/fields/orders__c.field-meta.xml
<CustomField>
    <fullName>orders__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>order</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>Phone Sales</relationshipLabel>
    <relationshipName>Phone_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>