force-app/main/default/objects/Phone_Sale__c/fields/payment_pending__c.field-meta.xml
<CustomField>
    <fullName>payment_pending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Pending</label>
    <type>Checkbox</type>
</CustomField>