force-app/main/default/objects/Phone_Sale__c/fields/Pre_Tour_StopOver_Solo_Price__c.field-meta.xml
<CustomField>
    <fullName>Pre_Tour_StopOver_Solo_Price__c</fullName>
    <label>Pre Tour StopOver Solo Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>