force-app/main/default/objects/Phone_Sale__c/fields/Purchaser__c.field-meta.xml
<CustomField>
    <fullName>Purchaser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchaser</label>
    <referenceTo>user__c</referenceTo>
    <relationshipLabel>Phone Sales</relationshipLabel>
    <relationshipName>Phone_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>