force-app/main/default/objects/Phone_Sale__c/fields/record_locked__c.field-meta.xml
<CustomField>
    <fullName>record_locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Record Locked</label>
    <type>Checkbox</type>
</CustomField>