force-app/main/default/objects/Phone_Sale__c/fields/sb_request__c.field-meta.xml
<CustomField>
    <fullName>sb_request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possible Stay Behind</label>
    <type>Checkbox</type>
</CustomField>