force-app/main/default/objects/Phone_Sale__c/fields/Solo_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Solo_Surcharge__c</fullName>
    <label>Solo Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>