force-app/main/default/objects/Phone_Sale__c/fields/Solo_Traveller__c.field-meta.xml
<CustomField>
    <fullName>Solo_Traveller__c</fullName>
    <formula>IF( QTY_Number__c = 1, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solo Traveller</label>
    <type>Checkbox</type>
</CustomField>