force-app/main/default/objects/Phone_Sale__c/fields/SOP1__c.field-meta.xml
<CustomField>
    <fullName>SOP1__c</fullName>
    <label>SOP1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>