force-app/main/default/objects/Phone_Sale__c/fields/SOP__c.field-meta.xml
<CustomField>
    <fullName>SOP__c</fullName>
    <formula>sub_options__r.Price_formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>