force-app/main/default/objects/Phone_Sale__c/fields/Stopover_cost__c.field-meta.xml
<CustomField>
    <fullName>Stopover_cost__c</fullName>
    <formula>(IF( Solo_Traveller__c ,  (QTY_Number__c * sub_stopover__r.Price_Solo__c) , (QTY_Number__c * sub_stopover__r.Price__c))) + (IF( Solo_Traveller__c , (QTY_Number__c *  Post_Tour_StopOver__r.Price_Solo__c ) , (QTY_Number__c *  Post_Tour_StopOver__r.Price__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stopover cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>