force-app/main/default/objects/Phone_Sale__c/validationRules/ExpirePSIfNotPaymentPending.validationRule-meta.xml
<ValidationRule>
    <fullName>ExpirePSIfNotPaymentPending</fullName>
    <active>true</active>
    <errorConditionFormula>AND(PRIORVALUE(payment_pending__c),NOT(payment_pending__c), CONTAINS(TEXT(Status__c),&apos;On Hold&apos;))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You must expire the Phone Sale Status</errorMessage>
</ValidationRule>