force-app/main/default/objects/Phone_Sale__c/validationRules/Lock_record.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_record</fullName>
    <active>true</active>
    <description>Locks the processed record by stopping a validation on Status change from confirmed</description>
    <errorConditionFormula>IF(NOT(PRIORVALUE(hidden_checkbox__c)) &amp;&amp;  NOT(hidden_checkbox__c) &amp;&amp; PRIORVALUE(record_locked__c), true, false)</errorConditionFormula>
    <errorMessage>Processed records are locked!</errorMessage>
</ValidationRule>