force-app/main/default/objects/Phone_Sale__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>processed__c</columns>
    <columns>Purchaser__c</columns>
    <columns>Purchaser_Name__c</columns>
    <columns>QTY_Number__c</columns>
    <columns>orders__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>departures_dates__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>