force-app/main/default/objects/Phone_Sale__c/listViews/Held_Phone_Sales.listView-meta.xml
<ListView>
    <fullName>Held_Phone_Sales</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>payment_pending__c</columns>
    <columns>Purchaser__c</columns>
    <columns>Deal__c</columns>
    <columns>options__c</columns>
    <columns>sub_options__c</columns>
    <columns>departure_cities__c</columns>
    <columns>departures_dates__c</columns>
    <columns>QTY_Number__c</columns>
    <columns>Amount_Outstanding__c</columns>
    <columns>Total_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>is_held__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Held Phone Sales</label>
    <sharedTo>
        <role>Customer_Service_Manager</role>
        <role>Team_Leader_Travel_Consultant</role>
    </sharedTo>
</ListView>