force-app/main/default/objects/Phone_Sale__c/listViews/X1414_on_Hold.listView-meta.xml
<ListView>
    <fullName>X1414_on_Hold</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Deal__c</columns>
    <columns>Email_Purchaser__c</columns>
    <columns>Amount_Outstanding__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Deal__c</field>
        <operation>equals</operation>
        <value>1414</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>On Hold</value>
    </filters>
    <label>1414 on Hold</label>
</ListView>